# messen-von-text-aehnlichkeit

./: README.md  Text Ähnlichkeit.ipynb  pyproject.toml
