[project]
name = "messen-von-text-aehnlichkeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flagembedding>=1.3.5",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.4",
    "openai>=1.98.0",
    "scikit-learn>=1.7.1",
    "wheel>=0.45.1",
]
